--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "HollywoodbetsAdmin": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "HollywoodbetsAdmin"
+    }
+  },
+  "defaultProject": "HollywoodbetsAdmin",
+  "cli": {
+    "analytics": "33658ca1-5064-49f9-999d-a92905d6bcea"
+  }
 }
